allow setting date overrides for designers fixes #8289
test plan:
 * create a term that starts in the future, but has an override
   for designers to access now
 * create and invite designer to a course in that term
 * the designer should be able to create content in that course

Change-Id: If1a55d5d7ed8693c4fb792baffbf3dfb6d92772c
Reviewed-on: https://gerrit.instructure.com/10426
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Simon Williams <simon@instructure.com>

--- a/app/views/terms/_term.html.erb
+++ b/app/views/terms/_term.html.erb
@@ -29,7 +29,7 @@
       </div>
     <% end %>
   </td>
-  <% types = [StudentEnrollment, TeacherEnrollment, TaEnrollment] %>
+  <% types = [StudentEnrollment, TeacherEnrollment, TaEnrollment, DesignerEnrollment] %>
   <td class="permissions">
     <table>
       <tr class="general_dates">
@@ -57,6 +57,10 @@
                 start_tooltip = t 'tooltips.term_starts_tas', "For TAs the term starts"
                 end_tooltip = t 'tooltips.term_ends_tas', "For TAs the term ends"
                 access_label = mt 'labels.tas_can_access_from', "**TAs** can access from"
+              when 'designer_enrollment'
+                start_tooltip = t 'tooltips.term_starts_designers', "For designers the term starts"
+                end_tooltip = t 'tooltips.term_ends_designers', "For designers the term ends"
+                access_label = mt 'labels.designers_can_access_from', "**Designers** can access from"
               end
           %>
           <%= access_label %>
