--- a/app/stylesheets/blue/application.scss
+++ b/app/stylesheets/blue/application.scss
@@ -2,11 +2,14 @@
 @import "mixins";
 
 @import "bootstrap/bootstrap";
+@import "bootstrap/bootstrap-responsive";
 @import "bootstrap_overrides";
 
+@import "icons";
 @import "borders";
 @import "gutters";
 @import "components";
 
 @import "base";
+@import "forms";
 
