--- a/app/stylesheets/blue/_components.scss
+++ b/app/stylesheets/blue/_components.scss
@@ -1,16 +1,19 @@
 .toolbar {
-  padding: $contentBoxPadding;
+  padding: $contentBoxPadding / 2;
   font-size: $baseFontSize;
   line-height: $baseLineHeight;
   @include bevelText;
-  @include buttonBackground($toolbarBackgroundLight, $toolbarBackground);
+  @include buttonBackground(#E0E6EB, #D5DDE3);
   $shadow: inset 0 1px 0 rgba(255,255,255,0.75);
   @include box-shadow($shadow);
+
+  .header {
+    font-size: 16px;
+  }
 }
 
 .content-callout {
-  background-color: $contentCalloutColor !important;
-  color: $blueDark;
+  @include content-callout();
 }
 
 .content-box {
@@ -117,25 +120,28 @@
 .nav-links {
   @include clearfix();
   padding-left:0;
-}
-.nav-links > li {
-  float: left;
-}
-.nav-links > li > a {
-  padding-right: 8px;
-  padding-left: 8px;
-  margin-right: 2px;
-  line-height: 4px; // keeps the overall height an even number
-  color: $gray;
-  font-size: 11px;
-  font-weight: bold;
 
-  &.active, &:hover {
-    color: $black;
-  }
+  & > li {
+    float: left;
 
-  &:first-child {
-    padding-left: 0;
+    & > a {
+      padding-right: 8px;
+      padding-left: 8px;
+      margin-right: 2px;
+      line-height: 4px; // keeps the overall height an even number
+      color: $gray;
+      font-size: 11px;
+      font-weight: bold;
+
+      &.active, &:hover {
+        color: $black;
+        background: none;
+      }
+
+      &:first-child {
+        padding-left: 0;
+      }
+    }
   }
 }
 
@@ -154,4 +160,68 @@
   }
 }
 
+.box-shadow {
+  @include box-shadow(0 2px 4px rgba(0,0,0,.25))
+}
 
+.triangle-box, .triangle-box-with-header {
+  position: relative; // for the triangle
+  margin-left: 20px;
+  border: solid 1px $borderColor;
+  border-radius: 3px;
+  @include box-shadow(0 1px 1px 0px lighten($borderColor, 20%));
+  @include gradient-vertical($white, $lightBackground);
+
+  .triangle-box-header {
+    // relative position to sit on top of the triangle
+    position: relative;
+    z-index: 1;
+    padding: 8px 20px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    @include content-callout();
+    border-bottom: solid 1px $listBorderColor;
+    color: $blueDark;
+
+    .triangle-box-subheader {
+      color: $grayDark;
+      font-size: 11px;
+    }
+  }
+
+  // the triangle
+  &:before {
+    content: ' ';
+    display: block;
+    height: 16px;
+    width: 16px;
+    position: absolute;
+    top: 15px;
+    left: -9px;
+    @include rotate(45deg);
+    border: solid 1px $borderColor;
+    border-right: none;
+    border-top: none;
+    background: $white;
+  }
+
+  .triangle-box-content {
+    padding: 10px 20px;
+  }
+}
+
+.triangle-box-with-header:before {
+  @include box-shadow(0 1px 1px 0px lighten($borderColor, 20%));
+  @include gradient-directional(lighten($contentCalloutColor, 4%), $contentCalloutColor, 45deg);
+}
+
+.ie {
+  .triangle-box:before, .triangle-box-with-header:before {
+    display: none;
+    content: '';
+  }
+}
+
+.checkbox-inline {
+  padding-top: 4px;
+}
