make discussions accessible, fixes #7980
test plan:

on both a threaded and thread'ish discussion:
* open the discussion and try to tab to the "add
  a reply", make sure that you can tab to it and
  hitting space will open it up

Change-Id: Id8ef74e4d81a037a424ee9d8f7f99d67e2c9ad20
Reviewed-on: https://gerrit.instructure.com/10440
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Florence <ryanf@instructure.com>

--- a/app/stylesheets/discussions.sass
+++ b/app/stylesheets/discussions.sass
@@ -142,10 +142,12 @@
   display: block
   background-color: #fff
   font-size: 11px
-  color: #636363
+  color: #636363 !important
   padding: 3px 10px
   cursor: text
-  border: 1px inset
+  border: 1px inset #eee
+  &:hover
+    text-decoration: none
 //these can be global
 .avatar
   float: left
