tweak turnitin css typo
test-plan:
- make sure turnitin score text size is jumpy when you hover over it

Change-Id: Ie6080bcce246c1ca86fc76713e588a8654b5db86
Reviewed-on: https://gerrit.instructure.com/10485
Reviewed-by: Ryan Shaw <ryan@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/stylesheets/speed_grader.sass
+++ b/app/stylesheets/speed_grader.sass
@@ -468,7 +468,7 @@ body .ui-selectmenu-dropdown:hover .ui-selectmenu-icon, body .ui-state-active .u
         &.submission_error, &.submission_pending
           padding: 1px
         &:hover
-          font-size: 0.7em
+          font-size: 9px 
       .submission-file-download
         display: block
         +opacity(0.5)
