consistency fix: minor text change in course copy
Change-Id: I542133a951cc4bd31e7bab0e5e2cb859693f7092
Reviewed-on: https://gerrit.instructure.com/10502
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Bryan Madsen <bryan@instructure.com>

--- a/app/views/content_imports/choose_content.html.erb
+++ b/app/views/content_imports/choose_content.html.erb
@@ -39,7 +39,7 @@
 
   <h3 style="margin-bottom: 10px;">
     <%= check_box :copy, :everything, :checked => true, :class => "copy_everything" %>
-    <%= label :copy, :everything, t('labels.copy_everything', "Copy Everything from %{course}", :course => @source_course.name) %>
+    <%= label :copy, :everything, t('labels.copy_everything', "Copy everything from %{course}", :course => @source_course.name) %>
   </h3>
 
   <div id="item_selections" style="display: none; position: relative;">
