--- a/doc/api/layout/html/headers.erb
+++ b/doc/api/layout/html/headers.erb
@@ -1,3 +1,9 @@
-<meta name="Content-Type" content="text/html; charset=<%= charset %>" />
+<meta name="Content-Type" content="text/html;charset=UTF-8">
+<meta charset="UTF-8">
 <title><%= options[:page_title] %></title>
 <link rel="stylesheet" href="<%= url_for("css/common.css") %>" type="text/css" media="screen" charset="utf-8" />
+<link href="<%= url_for("css/shThemeDefault.css") %>" rel="stylesheet" type="text/css" />
+<script src="<%= url_for("js/shCore.js") %>" type="text/javascript"></script>
+<script src="<%= url_for("js/jquery.min.js") %>" type="text/javascript"></script>
+<script src="<%= url_for("js/shAutoloader.js") %>" type="text/javascript"></script>
+<script src="<%= url_for("js/shBrushJScript.js") %>" type="text/javascript"></script>
