use! config'd slickgrid
Change-Id: I82a54c9ef6a7f4a6e78dcb489fa33279839cbffd
Reviewed-on: https://gerrit.instructure.com/10517
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Shaw <ryan@instructure.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -276,6 +276,28 @@
         attach: function(_, $){
           return Backbone;
         }
+      },
+
+      // slick grid shim
+      'vendor/slickgrid/lib/jquery.event.drag-2.0.min': {
+        deps: ['jquery'],
+        attach: '$'
+      },
+      'vendor/slickgrid/slick.core': {
+        deps: ['jquery', 'use!vendor/slickgrid/lib/jquery.event.drag-2.0.min'],
+        attach: 'Slick'
+      },
+      'vendor/slickgrid/slick.grid': {
+        deps: ['use!vendor/slickgrid/slick.core'],
+        attach: 'Slick'
+      },
+      'vendor/slickgrid/slick.editors': {
+        deps: ['use!vendor/slickgrid/slick.core'],
+        attach: 'Slick'
+      },
+      'vendor/slickgrid/plugins/slick.rowselectionmodel': {
+        deps: ['use!vendor/slickgrid/slick.core'],
+        attach: 'Slick'
       }
     }
   };
