--- a/app/views/content_imports/quizzes.html.erb
+++ b/app/views/content_imports/quizzes.html.erb
@@ -42,7 +42,7 @@
     
     <div style="margin-top: 10px;">
       <button type="submit" class="submit_button button big-button"><%= t 'buttons.import', "Import Quiz" %></button>
-      <a href="<%= context_url(@context, :context_url) %>" class="button"><%= image_tag "check.png" %> <%= t 'buttons.back', "I'm Done Importing, back to the Course." %></a>
+      <a href="<%= context_url(@context, :context_url) %>" class="button back_to_course"><%= image_tag "check.png" %> <%= t 'buttons.back', "I'm Done Importing, back to the Course." %></a>
     </div>
   <% end %>
   <div style="<%= hidden if @quizzes.empty? %> margin-top: 30px;">
@@ -58,7 +58,7 @@
     <p><%= mt 'messages.file_uploaded', "**Thank you!**  We'll start importing your QTI data and send you an email when it's complete. The process normally finishes within 10 minutes." %></p>
     <p>
       <a class="button big-button" href="<%= context_url(@context, :context_import_quizzes_url) %>"><%= t 'buttons.import_more', "Import another QTI file" %></a>
-      <a href="<%= context_url(@context, :context_url) %>" class="button"><%= image_tag "check.png" %> <%= t 'buttons.back', "I'm Done Importing, back to the Course." %></a>
+      <a href="<%= context_url(@context, :context_url) %>" class="button back_to_course"><%= image_tag "check.png" %> <%= t 'buttons.back', "I'm Done Importing, back to the Course." %></a>
     </p>
   </div>
 </div>
