don't allow resize of textarea fixes #8458
also gave a few elements target="_blank" so you aren't
taken out of canvas when you click on the Jing or
Canvas Guides links

test plan:
  1. login and click on the help button
  2. click on "Report a Problem"
  3. notice you can't resize the text area anymore
  4. also notice the Jing and Canvas Guides links
     open in a new tab

Change-Id: Iac8a95115fad2ca94f40c84f950288f15f38ce49
Reviewed-on: https://gerrit.instructure.com/10549
Reviewed-by: Ryan Shaw <ryan@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/stylesheets/helpDialog.sass
+++ b/app/stylesheets/helpDialog.sass
@@ -56,6 +56,7 @@
   textarea
     width: 100%
     height: 100px
+    resize: none
   input
     width: 100%
     font-size: 13px
@@ -85,6 +86,7 @@
       position: absolute
       left: 10px
       top: 10px
+
 .ui-dialog-header-backlink
   display: block
   float: left
