--- a/app/views/jst/helpDialog.handlebars
+++ b/app/views/jst/helpDialog.handlebars
@@ -33,7 +33,7 @@
       <div class="ui-state-highlight">
         <span class="ui-icon ui-icon-info"></span>
         <strong>{{#t "for_an_instant_answer"}}For an instant answer:{{/t}}</strong>
-        <div>{{#t "see_if_your_issue_is_addressed_in_the_canvas_guides"}}See if your issue is addressed in the <a href="http://guides.instructure.com/">Canvas Guides</a>.{{/t}}</div>
+        <div>{{#t "see_if_your_issue_is_addressed_in_the_canvas_guides"}}See if your issue is addressed in the <a target="_blank" href="http://guides.instructure.com/">Canvas Guides</a>.{{/t}}</div>
       </div>
     {{/if}}
     <div>
@@ -43,7 +43,7 @@
     <div>
       <label for="error-comments">
         {{#t "description"}}Description{{/t}}
-        <small>{{#t "include_a_link_to_a_screencast_or_screenshot_using_something_like_jing"}}Include a link to a screencast/screenshot using something like <a href="http://www.techsmith.com/download/jing">Jing</a>.{{/t}}</small>
+        <small>{{#t "include_a_link_to_a_screencast_or_screenshot_using_something_like_jing"}}Include a link to a screencast/screenshot using something like <a target="_blank" href="http://www.techsmith.com/download/jing">Jing</a>.{{/t}}</small>
       </label>
       <textarea id="error-comments" name="error[comments]"></textarea>
     </div>
