--- a/app/views/accounts/_courses_right_side.html.erb
+++ b/app/views/accounts/_courses_right_side.html.erb
@@ -16,10 +16,10 @@
         <% end %>
         <% if @query.present? %><input name="course[name]" type="hidden" value="<%= @query %>" /><% end %>
         <input name="hide_enrollmentless_courses" type="hidden" value="0" />
-        <input name="hide_enrollmentless_courses" type="checkbox" value="1" <% if params[:hide_enrollmentless_courses] == "1" %>checked="checked"<% end %>/>
+        <input id="enroll_filter_checkbox" name="hide_enrollmentless_courses" type="checkbox" value="1" <% if params[:hide_enrollmentless_courses] == "1" %>checked="checked"<% end %>/>
         <label for="hide_enrollmentless_courses"><%= t(:hide_enrollmentless_courses, "Hide enrollmentless courses") %></label>
         <br />
-        <button class='button'><%= t("#buttons.filter", "Filter") %></button>
+        <button class='button filter_button'><%= t("#buttons.filter", "Filter") %></button>
       </form>
     </div>
 
