auto-fill course dates on course copy content page
The start/end dates of the source course are now filled in
for the user automatically for happiness

Test Plan:
 * Set the start/end dates for a course
 * Go to copy the course
 * In the "Adjust events and due dates" section, the dates for the original course should already be filled in

closes #8415

Change-Id: Ic00c9d8f438a8291421690ce814263dd102d4c26
Reviewed-on: https://gerrit.instructure.com/10562
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Simon Williams <simon@instructure.com>

--- a/app/views/content_imports/_date_shift_form.html.erb
+++ b/app/views/content_imports/_date_shift_form.html.erb
@@ -5,9 +5,9 @@
       <div style="margin-bottom: 5px;"><%= t 'labels.dates_range', "%{course} dates range", :course => %{<strong class="course_name">#{@source_course.name}</strong>}.html_safe %></div>
       <% ot 'from_to', "*from* %{start_date} **to** %{end_date}",
             :start_date => capture { %>
-        <div style="float: left;"><%= text_field :copy, :old_start_date, :value => "", :class => "date_field", :style => "width: 120px;" %></div>
+        <div style="float: left;"><%= text_field :copy, :old_start_date, :value => date_string(@source_course.real_start_date, :long), :class => "date_field", :style => "width: 120px;" %></div>
       <% }, :end_date => capture { %>
-        <div style="float: left;"><%= text_field :copy, :old_end_date, :value => "", :class => "date_field", :style => "width: 120px;" %></div>
+        <div style="float: left;"><%= text_field :copy, :old_end_date, :value => date_string(@source_course.real_end_date, :long), :class => "date_field", :style => "width: 120px;" %></div>
       <% }, :wrapper => { '*' => '<div style="float: left; margin-left: 10px;">\1&nbsp;</div>',
         '**' => '<div style="float: left;">&nbsp;\1&nbsp;</div>' } %>
       <div class="clear"></div>
