--- a/app/views/context/_dashboard_topic.html.erb
+++ b/app/views/context/_dashboard_topic.html.erb
@@ -12,7 +12,9 @@
       <a href="<%= context_prefix(context_code) %>/discussion_topics/<%= topic ? topic.id : "{{ id }}" %>" class="title"><%= topic.try_rescue(:title) || t('no_title', "No Title") %></a>
       <div class="sub_title">
         <span class="context_code group_<%= context_code || 'blank' %>"><%= cached_context_short_name(context_code) %></span>
-        <a title="<%= t 'titles.author_name', "Author's name" %>" href="<%= context_prefix(context_code) %>/users/<%= topic ? topic.user_id : "{{ user_id }}" %>" class="user_name"><%= context_user_name(context_code, topic.try_rescue(:user_id)) %></a>
+        <% if topic && topic.user_id || !topic || topic.new_record? %>
+          <a title="<%= t 'titles.author_name', "Author's name" %>" href="<%= context_prefix(context_code) %>/users/<%= topic ? topic.user_id : "{{ user_id }}" %>" class="user_name"><%= context_user_name(context_code, topic.try_rescue(:user_id)) %></a>
+        <% end %>
       </div>
     </div>
     <div class="post_date time_ago_date"><%= datetime_string(post_date) || nbsp %></div>
