Don't let browser cache user answers on quiz in text inputs. Fixes #8504
Add "autocomplete='off'" to quiz text inputs so browsers like Chrome and Firefox
don't store answers. The answer text remains between different users taking
a quiz on the same machine/browser.

Test Plan:
* Create a quiz with a single fill in the blank choice and a multi fill in the blank questions.
* As a student, take the quiz and give answers in the blanks.
* Log out as that student and then login as different user and take the same quiz.
* Using mouse double-click on the inputs for blanks or the down arrow key, no
  stored answers should appear.

Change-Id: I3b249537eec20820c815da4ee59892a286f92686
Reviewed-on: https://gerrit.instructure.com/10605
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Zach Pendleton <zachp@instructure.com>

--- a/app/views/quizzes/_display_question.html.erb
+++ b/app/views/quizzes/_display_question.html.erb
@@ -323,7 +323,7 @@
     <% if user_answer %>
       <div class="user_points" <%= hidden(true) if (assessing || assessment_results) && question_type && question_type.entry_type == "none" %>>
         <% if editable %>
-          <input type="text" class="question_input" name="question_score_<%= hash_get(question, :id) %>" style="width: 30px; font-size: 1.2em;" value="<%= hash_get(user_answer, :correct) == "undefined" ? "--" : hash_get(user_answer, :points) %>"/>
+          <input type="text" class="question_input" name="question_score_<%= hash_get(question, :id) %>" style="width: 30px; font-size: 1.2em;" value="<%= hash_get(user_answer, :correct) == "undefined" ? "--" : hash_get(user_answer, :points) %>"  autocomplete='off'/>
         <% else %>
           <% if hash_get(user_answer, :correct) == "undefined" %>
            --
