--- a/app/views/quizzes/new.html.erb
+++ b/app/views/quizzes/new.html.erb
@@ -219,7 +219,7 @@
         </div>
         <div>
           <input type="checkbox" name="quiz[notify_of_update]" id="quiz_notify_of_update" value="1" checked="checked" />
-          <label for="quiz_notify_of_update"><%= t('labels.quiz_notify', 'Notify users this quiz has changed') %>
+          <label for="quiz_notify_of_update"><%= t('labels.quiz_notify', 'Notify users this quiz has changed') %></label>
         </div>
         <button type="submit" class="save_quiz_button button"><%= t('buttons.save_settings', "Save Settings") %></button>
         <button type="submit" class="publish_quiz_button button button-default"><%= @quiz.available? ? t('buttons.republish_quiz', "Re-Publish Quiz") : t('buttons.publish_quiz', "Publish Quiz") %></button>
